--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 </head>
 <body>
 	<div class="container">
-		<div class="grid-3">Teste 1</div>
-		<div class="grid-3">Teste 2</div>
-		<div class="grid-3">Teste 3</div>
-		<div class="grid-3">Teste 4</div>
+		<div class="grid-5"></div>
+		<div class="grid-7">
+			<div class="row">
+				<div class="grid-6"></div>
+				<div class="grid-6"></div>
+			</div>
+		</div>
+		<div class="grid-4"></div>
+		<div class="grid-4"></div>
+		<div class="grid-4"></div>
 	</div>
 </body>
 </html>
