--- a/index.html
+++ b/index.html
@@ -6,19 +6,100 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Le Scone</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@400;700&family=PT+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="container">
-		<div class="grid-5"></div>
+
+	<main class="container intro">
+		<div class="grid-5">
+			<img class="logo" src="img/lescone.png" alt="Le Scone">
+			<div class="intro-info">
+				<p>
+					De Seg. à Sab.<span class="aberto"></span>
+					das 7:00h às 18:00h
+				</p>
+				<p>
+					Praia do Botafogo, 300<br>Rio de Janeiro - RJ
+				</p>
+			</div>
+			<p class="intro-telefone">+55 021 2412-3333</p>
+		</div>
 		<div class="grid-7">
-			<div class="row">
-				<div class="grid-6"></div>
-				<div class="grid-6"></div>
+			<img src="img/foto.png" alt="Foto de Le Scone">
+		</div>
+	</main>
+
+	<section class="container menu">
+		<h1 class="grid-4 titulo">Menu</h1>
+		<div class="grid-7 offset-1">
+			<div class="menu-item">
+				<img src="img/prato-1.png" alt="Foto Prato 1">
+				<h2>Entradas</h2>
+				<ul>
+					<li><span>R$1,70</span>Ovos Mexidos</li>
+					<li><span>R$2,70</span>Scones de Frutas</li>
+					<li><span>R$3,70</span>Joelho de Queijo</li>
+					<li><span>R$4,70</span>Presunto Cozido</li>
+					<li><span>R$3,70</span>Coxinha de Frango</li>
+				</ul>
+			</div>
+			<div class="menu-item">
+				<img src="img/prato-2.png" alt="Foto Prato 2">
+				<h2>Pratos Principais</h2>
+				<ul>
+					<li><span>R$10,70</span>Penne com Queijo</li>
+					<li><span>R$22,70</span>Feijoada</li>
+					<li><span>R$33,70</span>Costela ao Molho</li>
+					<li><span>R$14,70</span>Medalão de Frango</li>
+					<li><span>R$13,70</span>Coxinha de Frango</li>
+				</ul>
 			</div>
 		</div>
-		<div class="grid-4"></div>
-		<div class="grid-4"></div>
-		<div class="grid-4"></div>
-	</div>
+	</section>
+
+	<section class="container contato">
+		<h1 class="grid-4 titulo">Contato</h1>
+		<div class="grid-7 offset-1">
+			<form action="/">
+				<label>Nome</label>
+				<input type="text">
+				<div class="row">
+					<div class="grid-7">
+						<label>E-mail</label>
+						<input type="text">
+					</div>
+					<div class="grid-5">
+						<label>Telefone</label>
+						<input type="text">
+					</div>
+				</div>
+				<label>Mensagem</label>
+				<textarea></textarea>
+				<input type="button" value="Enviar">
+			</form>
+			<div class="contato-info">
+				<p>
+					contato@lescone.com ////
+				</p>
+				<p>
+					+55 021 2412-3333 ////
+				</p>
+			</div>
+			<a class="contato-mapa" href="#">
+				<img src="img/map.png" alt="Como chegar em Le Scone">
+			</a>
+		</div>
+	</section>
+
+	<footer>
+		<div class="container">
+			<p>
+				Le Scone © 1989 - 2020. Alguns direitos reservados
+			</p>
+			<a href="https://github.com/jpdrsanchez" target="_blank">
+				<img src="img/lescone-icone.png" alt="Le Scone Icone">
+			</a>
+		</div>
+	</footer>
 </body>
 </html>
