Finalized _intro.scss

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 			<div class="intro-info">
 				<p>
 					De Seg. à Sab.<span class="aberto"></span>
-					das 7:00h às 18:00h
+					<br>
+					das 07:00h às 18:00h
 				</p>
 				<p>
 					Praia do Botafogo, 300<br>Rio de Janeiro - RJ
@@ -25,7 +26,7 @@
 			<p class="intro-telefone">+55 021 2412-3333</p>
 		</div>
 		<div class="grid-7">
-			<img src="img/foto.png" alt="Foto de Le Scone">
+			<img class="intro-foto" src="img/foto.png" alt="Foto de Le Scone">
 		</div>
 	</main>
 
