Finalized _contato.scss

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				</div>
 				<label>Mensagem</label>
 				<textarea></textarea>
-				<input type="button" value="Enviar">
+				<input class="button" type="button" value="Enviar">
 			</form>
 			<div class="contato-info">
 				<p>
