Finalized _footer.scss

--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
 		</div>
 	</section>
 
-	<footer>
+	<footer class="footer">
 		<div class="container">
-			<p>
+			<p class="grid-9">
 				Le Scone © 1989 - 2020. Alguns direitos reservados
 			</p>
-			<a href="https://github.com/jpdrsanchez" target="_blank">
+			<a class="grid-3" href="https://github.com/jpdrsanchez" target="_blank">
 				<img src="img/lescone-icone.png" alt="Le Scone Icone">
 			</a>
 		</div>
